--- a/template/common/_head.ejs
+++ b/template/common/_head.ejs
@@ -11,7 +11,8 @@
     <title>
       <%= headTitle %>
     </title>
-    <link rel="icon" href="/image/favicon.ico">
+    <base href="http://www2.linux.it.teu.ac.jp/linux.old/">
+    <link rel="icon" href="image/favicon.ico">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -21,7 +22,6 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <base href="http://www2.linux.it.teu.ac.jp/linux/">
 </head>
 
 <body class="no-thank-yu">
